--- a/webtask/package.json
+++ b/webtask/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "rss": "^1.2.2"
+    "express": "^4.16.3",
+    "node-fetch": "^2.1.2",
+    "rss": "^1.2.2",
+    "webtask-tools": "^3.2.1"
   }
 }
