--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "cfpland-worker",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
   "scripts": {
-    "build": "worker/node_modules/.bin/webpack -p --progress --colors",
-    "watch": "worker/node_modules/.bin/webpack -p --progress --colors --watch"
+    "build": "node_modules/.bin/webpack -p --progress --colors",
+    "watch": "node_modules/.bin/webpack -p --progress --colors --watch"
   },
-  "main": "../dist/index.js",
-  "author": "",
+  "author": "Karl Hughes <karl@cfpland.com>",
   "license": "MIT",
   "dependencies": {
     "acorn": "^6.1.1",
